# dedalus-marketplace-crawler

./: .env.example  .gitignore  README.md  STRUCTURE.md  main.py  pyproject.toml  requests_mock.py
.github/workflows/: ci.yml
config/: .env.example
examples/: dedaluslabs-ai-marketplace-akakak-sonar.html
src/: __init__.py  crawler.py  main.py  server.py
tests/: __init__.py  conftest.py  test_crawler.py  test_integration.py
