# --- BUILD SYSTEM ---

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

# --- PROJECT CONFIGURATION ---

[project]
name = "dedalus-marketplace-crawler"
version = "0.0.1"
description = "A Dedalus MCP server that crawls the Dedalus Marketplace to list all servers with their details."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Dedalus Labs" },
]
keywords = ["ai", "mcp", "agents", "dedalus", "marketplace", "crawler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "dedalus-mcp>=0.4.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvloop>=0.22.1; platform_system != 'Windows'",
    # Crawler dependencies
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

# --- PROJECT URLS ---

[project.urls]
Homepage = "https://github.com/dedalus-labs/dedalus-marketplace-crawler"
Repository = "https://github.com/dedalus-labs/dedalus-marketplace-crawler"

[project.scripts]
main = "main:main"

# --- DEPENDENCY GROUPS ---

[dependency-groups]
runtime = [
    "pydantic>=2.12.5",
    "uvloop>=0.22.1; platform_system != 'Windows'",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

test = [
    "anyio>=4.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.0",
]

lint = ["ruff>=0.13.3", "pre-commit>=4.3.0"]

dev = [
    { include-group = "runtime" },
    { include-group = "test" },
    { include-group = "lint" },
]

# --- UV CONFIGURATION ---

[tool.uv]
preview = true
package = false
default-groups = ["runtime"]
cache-dir = ".cache/uv"
compile-bytecode = true
link-mode = "hardlink"
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]
concurrent-downloads = 50
concurrent-builds = 4
concurrent-installs = 4
resolution = "highest"
prerelease = "if-necessary"
fork-strategy = "fewest"
index-strategy = "first-index"
python-preference = "managed"
python-downloads = "automatic"

# --- RUFF CONFIGURATION ---

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["build/", "dist/", ".venv/", "__pycache__/"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
skip-magic-trailing-comma = true
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# --- PYTEST CONFIGURATION ---

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "-v",
    "--color=yes",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# --- COVERAGE CONFIGURATION ---

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/tests/*", "test_*.py", "*_test.py"]
